--- a/config
+++ b/config
@@ -66,6 +66,14 @@ output * bg /usr/share/backgrounds/default.png fill
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 #===================================================================================================
+# TITLE BAR
+
+default_border none
+default_floating_border none
+titlebar_padding 1
+titlebar_border_thickness 0
+
+#===================================================================================================
 
 ### Key bindings
 #
