--- a/config
+++ b/config
@@ -74,6 +74,14 @@ titlebar_padding 1
 titlebar_border_thickness 0
 
 #===================================================================================================
+##GAPS 
+#INNER GAPS
+       	gaps inner 4
+
+#OUTER GAPS
+       	gaps outer 5
+
+#===================================================================================================
 
 ### Key bindings
 #
