--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -3,17 +3,18 @@
   "position": "top",
   "margin-bottom": 0,
   "modules-left": [
-    "sway/workspaces",
-    "sway/window"
+    "sway/window",
+    "tray"
   ],
   "modules-center": [
+     "sway/workspaces"
   ],
   "modules-right": [
     "temperature",
+    "battery",
     "memory",
     "cpu",
     "pulseaudio",
-    "battery",
     "network",
     "clock"
   ],
@@ -40,11 +41,11 @@
     "active-only": false,
     "all-outputs": true,
     "format-icons": {
-        "1": "🌱",
-        "2": "🍃",
-        "3": "🌿",
-        "4": "🍂",       
-        "5": "五",
+        "1": "I",
+        "2": "II",
+        "3": "III",
+        "4": "IV",       
+        "5": "V",
         "6": "六",
         "7": "七",
         "8": "八",
@@ -76,7 +77,7 @@
   },
   "temperature": {
     "interval": 1,
-    "format": "{icon} {temperatureC}°C ",
+    "format": "{icon} {temperatureC}°C",
     "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
     "format-icons": [
@@ -97,7 +98,7 @@
     "tooltip": "false"
   },
   "pulseaudio": {
-    "format": "VOL:{volume}%",
+    "format": "VOL:{volume}% ",
     "scroll-step": 1,
     "on-click": "pavucontrol"
   },
@@ -108,15 +109,15 @@
         "warning": 30,
         "critical": 15
     },
-    "format": "{capacity}% {icon}",
-    "format-full": "{capacity}% ",
-    "format-charging": "{capacity}% + ",
+    "format": "{icon} {capacity}%",
+    "format-full": "{icon} {capacity}% ",
+    "format-charging": "{icon} {capacity}%",
     "format-plugged": "{capacity}% ",
     "format-alt": "{time} {icon}",
     // "format-good": "", // An empty format will hide the module
     // "format-full": "",
     "format-icons": ["", "", "", "", ""],
-    "icon-size": 10,   
+    "icon-size": 16,   
     "on-update": "",
     "tooltip": true
 },
